--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,4 +28,6 @@ jobs:
         echo ${{ steps.config.outputs.server }}
         echo ${{ steps.config.outputs.username }}
         echo ${{ steps.config.outputs.repo }}
-        echo ${{ steps.config.outputs }}
+
+        SERVER=${{fromJson(steps.config.outputs).server}}
+        echo ${{ SERVER }}
