--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,5 +29,5 @@ jobs:
         echo ${{ steps.config.outputs.username }}
         echo ${{ steps.config.outputs.repo }}
 
-        SERVER=${{fromJson(steps.config.outputs).server}}
-        echo ${{ SERVER }}
+        # extract from step output object
+        echo ${{fromJson(steps.config.outputs).server}}
